Fix: Update bunny targets to use SDF generateFromSDF function

--- a/index.html
+++ b/index.html
@@ -537,19 +537,27 @@
             groupRed = createParticleSystem('red', CONFIG.redCount, 3.5); 
             groupGift = createParticleSystem('gift', CONFIG.giftCount, 3.0); 
 
-            // Bunny targets V3: Silhouette sampling (smooth like heart)
-            groupGold.geometry.userData.bunny = generateBunnySilhouette(CONFIG.goldCount, {
-                scale: 0.75, zJitter: 0.6, edgeBand: 0.07, mixEdge: 0.6
+            // Bunny targets V4: SDF + smooth union (mịn như tim)
+            groupGold.geometry.userData.bunny = generateFromSDF(CONFIG.goldCount, sdfBunny, {
+                scale: 0.72,
+                zJitter: 0.55,
+                edgeWidth: 0.05,
+                edgeMix: 0.70,
+                bounds: 1.25,
+                S: 35
             });
             
-            groupRed.geometry.userData.bunny = generateBunnyDetailsSilhouette(CONFIG.redCount, {
-                scale: 0.73, zJitter: 0.45
+            groupRed.geometry.userData.bunny = generateFromSDF(CONFIG.redCount, sdfBunnyDetails, {
+                scale: 0.72,
+                zJitter: 0.45,
+                edgeWidth: 0.07,
+                edgeMix: 0.55,
+                bounds: 1.25,
+                S: 35
             });
             
-            // Gift still has target but will be hidden when BUNNY
-            groupGift.geometry.userData.bunny = generateBunnySilhouette(CONFIG.giftCount, {
-                scale: 0.75, zJitter: 0.5, edgeBand: 0.07, mixEdge: 0.6
-            });
+            // Gift: dùng explode target (sẽ tắt khi BUNNY)
+            groupGift.geometry.userData.bunny = groupGift.geometry.userData.explode;
 
             // Create dust system for magic rain
             dustSystem = createDustSystem(1200);
